<resources>
    <string name="app_name">Gob facts</string>
    <string name="poster_path">Poster Path</string>
    <string name="login_now">Login now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sing_in">Sing in</string>
    <string name="logo">logo</string>
    <string name="columns">Columns</string>
    <string name="operations">Operations</string>
    <string name="resource">Resource</string>
    <string name="search">Search</string>
    <string name="default_web_client_id">951342723240-ued8ulbvtp5bqp9tqn9q043flgiqvdl1.apps.googleusercontent.com</string>
    <string name="enable_biometric">Enabled Biometric</string>
    <string name="or">or</string>
    <string name="fingerprint">Use fingerprint</string>
    <string name="no_data">Nothing to show</string>
    <string name="offline">Offline mode</string>
</resources>